--- a/_layouts/narrative.html
+++ b/_layouts/narrative.html
@@ -4,6 +4,8 @@ layout: default
 
 <article class="narrative">
   <h1 class="text-title">{{ page.title }}</h1>
-  <p class="byline">by {{ page.author }}</p>
+  <p class="byline">{{ page.author }}</p>
+  <h1 class="text-title">BHL {{ page.bhl }}</h1>
+  <p class="byline">{{ page.feast }}</p>
   {{ content }}
 </article>
