--- a/_layouts/narrative.html
+++ b/_layouts/narrative.html
@@ -6,6 +6,6 @@ layout: default
   <h1 class="text-title">{{ page.title }}</h1>
   <p class="byline">{{ page.author }}</p>
   <h1 class="text-title">BHL {{ page.bhl }}</h1>
-  <p class="byline">{{ page.feast }}</p>
+  <p class="byline">Feast: {{ page.feast }}</p>
   {{ content }}
 </article>
