--- a/_layouts/narrative.html
+++ b/_layouts/narrative.html
@@ -5,7 +5,7 @@ layout: default
 <article class="narrative">
   <h1 class="text-title">{{ page.title }}</h1>
   <p class="byline">{{ page.author }}</p>
-  <h1 class="text-title">BHL {{ page.bhl }}</h1>
+  <p class="byline">BHL {{ page.bhl }}</p>
   <p class="byline">Feast: {{ page.feast }}</p>
   {{ content }}
 </article>
