change back to heading-font

--- a/_sass/_ed.scss
+++ b/_sass/_ed.scss
@@ -107,7 +107,7 @@ a:focus {
 
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
-  font-family: $main-font;
+  font-family: $heading-font;
   margin-bottom: .5rem;
   font-weight: normal;
   color: $heading-color;
