heading font to palatino and color to 454545

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,7 +11,7 @@ sitemap: false
 
 /* Fonts */
 $main-font: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-$heading-font: serif;
+$heading-font: Palatino, serif;
 $regular-font-size: 1.25em; /* 20px / 16px = 1.25em; support text resizing in all browsers */
 
 
@@ -22,7 +22,7 @@ $regular-font-size: 1.25em; /* 20px / 16px = 1.25em; support text resizing in al
 */
 
 $text-color: #454545;
-$heading-color: #404040;
+$heading-color: #454545;
 $link-color: #841212;
 
 @import "ed";
