--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,7 @@
   <meta property="dc:title" content="{{ page.title }}" />
   <meta property="dc:creator" content="{% if page.author %}{{ page.author }}{% else %}{{ site.author.name }}{% endif %}" />
   <meta property="dc:identifier" content="{{ resource_url }}" />
+  <meta property="dc:language" content="en" />
   {% if page.editor %}<meta property="dc:contributor" content="{{ page.editor }}" />{% endif %}
   {% if page.publication-date %}<meta property="dc:date" content="{{ page.publication-date }}" />{% endif %}
   {% if page.rights %}<meta property="dc:rights" content="{{ page.rights }}" />{% endif %}
@@ -30,11 +31,10 @@
   <!-- Open Graph metadata -->
   <meta property="og:title" content="{{ page.title }}" />
   <meta property="og:url" content="{{ resource_url }}" />
+  <meta property="og:locale" content="en" />
   <meta property="og:image" content="{{ directory_url }}/assets/open-graph-logo-2.png" />
   <meta property="og:image:width" content="200" />
   <meta property="og:image:height" content="200" />
-  <meta property="fb:admins" content="elotroalex" />
-  <meta property="fb:app_id" content="589495744558280" />
 
 {% if page.layout == "default" %}
   <meta property="og:description" content="{{ site.description }}">
