--- a/_sass/_ed.scss
+++ b/_sass/_ed.scss
@@ -606,7 +606,7 @@ ul.poetry {
 
 .poem .byline,
 .poetry .byline {
-  font-style: italic;
+  font-style: normal;
   font-weight: normal;
   letter-spacing: 0;
   margin-top: -.5rem;
